	* windows-installer/setup-base.nsi: Add link to documentation folder.

2014-05-28  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* build-uclibc.sh: Adjust build procedure to create toolchain that
	can be used as an external toolchain in Buildroot.
	* rel-rpaths.sh: Do not patch libc.so, since there are no hardcoded
	paths in it anymore.

2014-05-11  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* README.md: Updated for unified binutils-gdb repository.
	* arc-clone-all.sh: Likewise.
	* symlink-all.sh: Avoid sim and gdb directories in binutils
	trampling on gdb versions.

2014-05-06  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* README.md: Update prerequisites and unify formatting.

2014-05-05  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* windows-installer/build-installer.sh: New file.

2014-05-05  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* windows-installer/setub-base.nsi: Rename to setup-base.nsi.

2014-04-22  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* dejagnu/baseboards/arc-sim-nsimdrv.exp: Use nSIM GNU IO hostlink
	if separate hostlink library is no specified explicitly.

2014-03-28  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* windows-installer/arcshell.bat: New file.

2014-03-24  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* windows-installer/README.md: Streamline instructions to create
	installer.
	* windows-installer/arc_all-openjdk.nsi: Rename to
	installer-standard.nsi
	* windows-installer/arc_all.nsi: Remove.
	* windows-installer/arc_setup_base.nsi: Rename setup-base.nsi
	* windows-installer/buildall.sh: Remove.
	* windows-installer/winbuild: Rename to gen-nsis-sections.sh

2014-03-17  Anton Kolesov  <anton.kolesov@synposys.com>

	* arc-versions.sh: Bump to Linux branch arc-3.13.

2014-03-17  Anton Kolesov  <anton.kolesov@synopsys.com>

	* build-all.sh: Add option --release-name. Default to GCC Git revision.
	* build-elf32.sh: Change compiler version string, use RELEASE_NAME
	variable supplied from build-all.sh